<?xml version='1.0' encoding='UTF-8'?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.lumira</groupId>
    <artifactId>lumira-parent</artifactId>
    <version>0.1.0</version>
    <packaging>pom</packaging>
    <name>lumira-parent</name>

    <modules>
        <module>services/lumira-system</module>
        <module>services/lumira-admin</module>
        <module>libs/lumira-common-core</module>
        <module>libs/lumira-common-domain</module>
        <module>libs/lumira-common-web</module>
        <module>libs/lumira-common-security</module>
        <module>libs/lumira-common-api</module>
        <module>libs/lumira-plugin-api</module>
        <module>services/lumira-auth</module>
        <module>services/lumira-file</module>
        <module>services/lumira-message</module>
        <module>services/lumira-plugin</module>
        <module>services/lumira-localization</module>
        <module>services/lumira-payment</module>
        <module>services/lumira-ai</module>
        <module>services/lumira-quartz</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <spring-boot.version>4.0.6</spring-boot.version>
        <spring-cloud.version>2025.1.1</spring-cloud.version>
        <spring-cloud-alibaba.version>2025.1.0.0</spring-cloud-alibaba.version>
        <mybatis-plus.version>3.5.16</mybatis-plus.version>
        <flyway.version>12.5.0</flyway.version>
        <jjwt.version>0.13.0</jjwt.version>
        <mysql.version>9.7.0</mysql.version>
        <springdoc.version>3.0.3</springdoc.version>
        <tika.version>3.2.3</tika.version>
        <opentelemetry-api.version>1.50.0</opentelemetry-api.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.opentelemetry</groupId>
                <artifactId>opentelemetry-api</artifactId>
                <version>${opentelemetry-api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>-Xshare:off -XX:+EnableDynamicAgentLoading</argLine>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                    <executions>
                        <execution>
                            <id>repackage</id>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>build-info</id>
                            <goals>
                                <goal>build-info</goal>
                            </goals>
                            <configuration>
                                <additionalProperties>
                                    <service.name>${project.artifactId}</service.name>
                                </additionalProperties>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                    <configuration>
                        <release>${java.version}</release>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
